--- a/styles.css
+++ b/styles.css
@@ -67,7 +67,7 @@ p {
 }
 
 .banner {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(49, 168, 221, 0.2), rgba(0, 0, 0, 0.6)),
+  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(49, 168, 221, 0.2), rgba(0, 0, 0, 0.6)),
     url('https://cyqs77l9sw.ufs.sh/f/ccydBuzjU4R1qvT5bJKZNlT1HtfV8uhGmBas0ogiv7cCY3rL');
   background-size: cover;
   background-position: center;
@@ -159,7 +159,7 @@ p {
 }
 
 #transform-world {
-  background: url("https://cyqs77l9sw.ufs.sh/f/ccydBuzjU4R1qvT5bJKZNlT1HtfV8uhGmBas0ogiv7cCY3rL") center center no-repeat fixed;
+  background: url("https://cyqs77l9sw.ufs.sh/f/ccydBuzjU4R1zRLUY2BK6XMkqbEnNQ0tC9giLOswTSJ42vcD") center center no-repeat fixed;
   background-size: cover;
   height: 560px;
   padding: 11.5rem;
